<resources>
    <string name="app_name">ToDoApp</string>
    <string name="category">HOME</string>
    <string name="task_name">Wyrzuć śmieci</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_description_hint">Task description</string>
    <string name="task_due_date_hint">Task due date</string>
    <string name="task_category_hint">Task category</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_task">Add Task</string>
    <string name="show_finished">Hide finished tasks</string>
    <string name="add_task_dialog_title">Add new Task</string>
    <string name="cancel">Cancel</string>
    <string name="accept">accept</string>
    <string name="work">work</string>
    <string name="none">none</string>
    <string name="school">school</string>
    <string name="home">home</string>
    <string name="one_minute">1 min</string>
    <string name="five_minute">5 min</string>
    <string name="ten_minute">10 min</string>
    <string name="thirty_minute">30 min</string>
    <string name="notifications">Notifications</string>
    <string name="createdTime">Created at:</string>
    <string name="apply_changes">Apply changes</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_task_title">Task Details &amp; Edit</string>
</resources>