<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/finishedFilterPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_finished" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/categoryToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:singleSelection="true"
        android:paddingVertical="15dp">

        <Button
            android:id="@+id/buttonNone"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />

        <Button
            android:id="@+id/buttonWork"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work" />

        <Button
            android:id="@+id/buttonSchool"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <Button
            android:id="@+id/buttonHome"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/notificationTimeToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:singleSelection="true"
        android:paddingVertical="15dp">

        <Button
            android:id="@+id/oneMinute"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_minute" />

        <Button
            android:id="@+id/fiveMinute"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minute" />

        <Button
            android:id="@+id/tenMinute"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_minute" />

        <Button
            android:id="@+id/thirtyMinute"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_minute" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>

